...
    <item type="id" name="add_button" />
    <item type="id" name="album_button" />
    <item type="id" name="album_logo" />
    <item type="id" name="album_name" />
    <item type="id" name="album_recordLabel" />
    <item type="id" name="album_released" />
    <item type="id" name="albums_button" />
    <item type="id" name="alertTitle" />
    <item type="id" name="androidx_window_activity_scope" />
    <item type="id" name="artist_logo" />
    <item type="id" name="artist_name" />
    <item type="id" name="artistsRv" />
    <item type="id" name="artistsVisitorFragment" />
    <item type="id" name="artists_button" />
    <item type="id" name="back_button" />
    <item type="id" name="back_button_artist" />
    <item type="id" name="buttonPanel" />
    <item type="id" name="button_section" />
    <item type="id" name="cancel_button" />
    <item type="id" name="checkbox" />
    <item type="id" name="chronometer" />
    <item type="id" name="circle_center" />
    <item type="id" name="collector_button" />
    <item type="id" name="collectors_button" />
    <item type="id" name="company_logo" />
    <item type="id" name="company_text" />
    <item type="id" name="confirm_button" />
    <item type="id" name="container" />
    <item type="id" name="content" />
    <item type="id" name="contentPanel" />
    <item type="id" name="coordinator" />
    <item type="id" name="createAlbumFragment" />
...
    <item type="id" name="view_transition" />
    <item type="id" name="view_tree_lifecycle_owner" />
    <item type="id" name="view_tree_on_back_pressed_dispatcher_owner" />
    <item type="id" name="view_tree_saved_state_registry_owner" />
    <item type="id" name="view_tree_view_model_store_owner" />
    <item type="id" name="visible_removing_fragment_view_tag" />
    <item type="id" name="visitor_button" />
    <item type="id" name="with_icon" />
</resources>

