<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="32.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="end|bottom|center" android:id="@id/fab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:src="@drawable/ic_dashboard_black_24dp" android:onClick="showPopup" android:contentDescription="menu" app:backgroundTint="#ff00d052" app:layout_cons
    <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.28" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.614">
        <ImageButton android:id="@id/back_button" android:background="#ffffffff" android:padding="8.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:src="@drawable/previous_24" android:contentDescription="Go back to previous screen" app:layout_constraintStart_toS
        <TextView android:textSize="24.0dip" android:textColor="#ff000000" android:id="@id/company_text" android:layout_width="128.0dip" android:layout_height="32.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:text="Albumes" android:fontFamily="@font/montserrat_bold" app:autoSizeTextType="uniform" app:layout_constraintStar
    </LinearLayout>
    <View android:id="@id/hr_view" android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="2.0dip" app:layout_constraintTop_toBottomOf="@id/linearLayout2" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_view_album" android:scrollbars="vertical" android:layout_width="413.0dip" android:layout_height="658.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/hr_view" />
</androidx.constraintlayout.widget.ConstraintLayout>
